# quart-api

./: README.md  app.py  pyproject.toml  run_it.sh  runserver.py
alembic/: env.py
alembic/versions/: 7b8b1df2ad3c_create_db.py  9d923484f4c7_name_to_username.py
src/apis/: __init__.py  authentication.py  routes.py  users.py
src/configs/: __init__.py
src/constants/: __init__.py
src/cruds/: __init__.py
src/database/: db.py
src/database/models/: __init__.py
src/extensions/: __init__.py
src/utils/: __init__.py
